--- a/.github/workflows/backend_lab1webapptest01.yml
+++ b/.github/workflows/backend_lab1webapptest01.yml
@@ -1,67 +1,44 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - lab1webapptest01
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - BackEnd
-  workflow_dispatch:
+    branches: [ "BackEnd" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.11'
-
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Install dependencies
-        run: pip install -r GrainSense/requirements.txt
-
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
-
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: cd GrainSense && docker build -t ${{ secrets.IMAGE_TAG }} .
   deploy:
-    runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Log in to Docker hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push Docker Image
+      run: docker push ${{ secrets.IMAGE_TAG }}
+
+  pull-to-azure-vm:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: python-app
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
+      - name: SSH into Azure VM and Pull Docker Image
+        uses: appleboy/ssh-action@master
         with:
-          app-name: 'lab1webapptest01'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E10A61CC1B554320A0C77BB8A38BD1DD }}
+          host: ${{ secrets.AZURE_VM_IP }}
+          username: ${{ secrets.AZURE_VM_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.AZURE_VM_SSH_PORT }}
+          script: |
+            docker pull ${{ secrets.IMAGE_TAG }}
+            docker stop my-container || true
+            docker rm my-container || true
+            docker run -d --name my-container -p 1234:1234 ${{ secrets.IMAGE_TAG }}
