--- a/.github/workflows/backend_lab1webapptest01.yml
+++ b/.github/workflows/backend_lab1webapptest01.yml
@@ -5,16 +5,12 @@ on:
     branches: [ "BackEnd" ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: cd GrainSense && docker build -t ${{ secrets.IMAGE_TAG }} .
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
     - name: Log in to Docker hub
       uses: docker/login-action@v1
       with:
@@ -24,6 +20,7 @@ jobs:
       run: docker push ${{ secrets.IMAGE_TAG }}
 
   pull-to-azure-vm:
+    needs: deploy
     runs-on: ubuntu-latest
 
     steps:
