--- a/.github/workflows/backend_lab1webapptest01.yml
+++ b/.github/workflows/backend_lab1webapptest01.yml
@@ -32,8 +32,8 @@ jobs:
         with:
           host: ${{ secrets.AZURE_VM_IP }}
           username: ${{ secrets.AZURE_VM_USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.AZURE_VM_SSH_PORT }}
+          password: ${{ secrets.AZURE_VM_PASSWORD }}
           script: |
             docker pull ${{ secrets.IMAGE_TAG }}
             docker stop my-container || true
