--- a/.github/workflows/backend_lab1webapptest01.yml
+++ b/.github/workflows/backend_lab1webapptest01.yml
@@ -35,7 +35,8 @@ jobs:
           port: ${{ secrets.AZURE_VM_SSH_PORT }}
           password: ${{ secrets.AZURE_VM_PASSWORD }}
           script: |
-            sudo docker pull ${{ secrets.IMAGE_TAG }}
             sudo docker stop my-container || true
             sudo docker rm my-container || true
+            sudo docker rmi ${{ secrets.IMAGE_TAG }} -f
+            sudo docker pull ${{ secrets.IMAGE_TAG }}
             sudo docker run -d --name my-container -p 1234:1234 ${{ secrets.IMAGE_TAG }}
