--- a/.github/workflows/lab02_workflow.yml
+++ b/.github/workflows/lab02_workflow.yml
@@ -31,13 +31,13 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Stop the current ECS tasks
-        run: |
-          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --desired-count 0
+      # - name: Stop the current ECS tasks
+      #   run: |
+      #     aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --desired-count 0
 
-      - name: Wait for the tasks to stop
-        run: |
-          sleep 30
+      # - name: Wait for the tasks to stop
+      #   run: |
+      #     sleep 30
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
