--- a/.github/workflows/lab02_workflow.yml
+++ b/.github/workflows/lab02_workflow.yml
@@ -8,7 +8,7 @@ env:
   AWS_REGION: eu-west-2
   ECR_REPOSITORY: shrek
   ECS_SERVICE: dead-service
-  ECS_CLUSTER: lab02-claster03
+  ECS_CLUSTER: lab02-claster04
   CONTAINER_NAME: lab02-container
 
 jobs:
@@ -61,7 +61,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: lab02-taskdef01.json
-          container-name: lab02-cantainer
+          container-name: lab02-container
           image: ${{ steps.build-image.outputs.image }}
 
 
